# gvs

./: .flake8  .gitignore  README.md  commands.txt  gitignore.txt  main.py  requirements.txt  setup.py
.github/workflows/: lint.yml
CMake/: CMakeLists.txt  setup.bat
CMake/src/: kernel.cuh  main.cu
VSproject/3/: 3.sln  3.vcxproj  kernel.cu  main.cu
VSproject/3/x64/Debug/: 3.exe.recipe  3.exp  3.ilk  3.lib  3.vcxproj.FileListAbsolute.txt  kernel.cu.cache  kernel.cu24110471.deps  main.cu-831341097.deps  main.cu.cache
VSproject/3/x64/Debug/3.tlog/: 3.lastbuildstate  (+6 more)
extensions/build_lib/cuda_extensions-0.1.0-py3.10-win-amd64.egg/cuda_extensions/: imp.cp310-win_amd64.pyd  imp.py  linear.cp310-win_amd64.pyd  linear.py
extensions/build_lib/imp_cuda_extension-0.0.0-py3.10-win-amd64.egg/: imp_cuda_extension.cp310-win_amd64.pyd
extensions/build_lib/imp_cuda_extension-0.0.0-py3.10-win-amd64.egg/EGG-INFO/: PKG-INFO  SOURCES.txt  native_libs.txt
extensions/cuda/: requirements.cuda.txt  setup.py
extensions/cuda/imp/: imp.cu  setup.py
extensions/cuda_extensions/: setup.py
extensions/cuda_extensions/imp/: imp.cu
extensions/cuda_extensions/linear/: linear.cu
kernel_cuda_extension.egg-info/: PKG-INFO
python/: commands.txt  main.py  setup.bat  setup.py
python/kernel_cuda_extension.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
python/src/: kernel.cu
src/: kernel.cu
test/: cuda_imp.py
tests/functional/: conftest.py
tests/functional/fixtures/: common.py
tests/functional/src/: test_imp.py  test_linear.py
tests/functional/testdata/: common.py
(+2 files in other folders)
